--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,16 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.2.2 <3.0.0"
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/pigIcon.png"
+
 dependencies:
   flutter:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.8.1
   firebase: ^7.3.0
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.5
@@ -48,7 +54,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   barcode_scan: ^2.0.1
-  qr_flutter: ^3.2.0
+  qr_flutter: ^3.1.0
   flutter_sparkline: "^0.1.0"
   flutter_staggered_grid_view: "^0.3.2"
   fluttertoast: ^7.1.1
@@ -59,6 +65,8 @@ dependencies:
   firebase_storage: ^3.1.6
   provider: ^4.3.2+2
   basic_utils: ^2.6.3
+  pdf: ^2.0.0
+  flutter_pdfview: ^1.0.4
 
 dev_dependencies:
   flutter_test:
